# ollama-lmstudio-proxy

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  cargo.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  refresh-api-docs.yml  release.yml  wiki.yml
api docs/: lmstudio_ollama_openai.md  lmstudio_vs_ollama.md  ollama.md
api docs/lm studio/: _embeddings.md  api-changelog.md  index.md
api-docs/ollama/: modelfile.md  openapi.yaml
api_docs/ollama/: faq.md  index.md  modelfile.md
scripts/: refresh-api-docs.sh
src/: common.rs  config.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs  model.rs  model_legacy.rs  server.rs  update.rs  utils.rs
src/api/: context.rs  lmstudio.rs  mod.rs  pipeline.rs  response.rs  retry.rs  web.rs
src/handlers/: context.rs  helpers.rs  lmstudio.rs  mod.rs  ollama.rs  response.rs  retry.rs  streaming.rs  transform.rs
src/http/: body.rs  client.rs  error.rs  mod.rs  parsing.rs  request.rs  response.rs
src/lmstudio/: download.rs  images.rs  keep_alive.rs  load_config.rs  loading_error.rs  mod.rs  native_chat.rs  request.rs  response.rs
src/model/: load_tracker.rs  matcher.rs  mod.rs  naming.rs  param_count.rs  resolver.rs  timestamps.rs  types.rs  utils.rs
src/proxy/: auth.rs  mod.rs  routes.rs  server.rs
src/server/: mod.rs  proxy.rs  rejection.rs  routes.rs
src/storage/: blob.rs  mod.rs  virtual_models.rs
src/streaming/: chunks.rs  mod.rs  native.rs  recovery.rs  response.rs  sse.rs
src/tests/: common_tests.rs  helpers_tests.rs  lmstudio_api_tests.rs  mod.rs  model_resolution_tests.rs  ollama_endpoints_tests.rs  parameter_mapping_tests.rs  response_transformation_tests.rs
tests/: integration_main.rs  integration_streaming_no_recovery.rs  translation_embed_params.rs  translation_generate_context.rs  translation_images.rs  translation_keep_alive.rs  translation_matcher.rs  translation_misc_helpers.rs  translation_model_types.rs  translation_param_count.rs  translation_pull_status.rs  translation_request_mapping.rs  translation_response_shape.rs  translation_streaming_chunks.rs  translation_tags_timestamp.rs  translation_timing.rs
tests/common/: mod.rs
tests/integration/: auth_gate.rs  auto_evict.rs  cold_load_bare_key.rs  lmstudio_extensions.rs  lmstudio_native.rs  lmstudio_openai.rs  native_chat.rs  native_chat_streaming.rs  ollama_chat.rs  ollama_create_blobs.rs  ollama_embed.rs  ollama_errors.rs  ollama_generate.rs  ollama_pull_delete_copy.rs  ollama_tags_show_ps.rs  server_routes.rs  streaming.rs  streaming_no_recovery.rs  web_fetch.rs  web_search.rs
tests/unit/: auth_token.rs  handlers_context.rs  handlers_lmstudio.rs  handlers_ollama_chat.rs  handlers_ollama_download_status.rs  handlers_ollama_download_utils.rs  handlers_ollama_embed_params.rs  handlers_ollama_generate.rs  handlers_ollama_health.rs  handlers_ollama_images.rs  handlers_ollama_keep_alive.rs  handlers_ollama_lifecycle.rs  handlers_ollama_model_resolution.rs  handlers_ollama_resolution.rs  handlers_ollama_utils.rs  handlers_response.rs  handlers_retry.rs  handlers_transform.rs  http_body.rs  http_client.rs  http_error.rs  http_parsing.rs  http_request.rs  http_response.rs  lmstudio_download_status.rs  lmstudio_download_utils.rs  lmstudio_keep_alive_parse.rs  lmstudio_keep_alive_spawn.rs  lmstudio_native_chat.rs  lmstudio_request.rs  lmstudio_response.rs  model_matcher.rs  model_naming.rs  model_param_count.rs  model_resolver.rs  model_timestamps.rs  model_types.rs  model_utils.rs  storage_blob.rs  storage_virtual_models.rs  (+7 more)
wiki/: API-Compatibility.md  Configuration.md  Home.md  MCP-Integrations.md  Request-Shapes-and-Options.md  _Sidebar.md
(+266 files in other folders)
