[package]
name = "ollama-lmstudio-proxy"
version = "0.3.2"
edition = "2024"
authors = ["uwuclxdy"]
description = "High-performance proxy server that bridges Ollama API and LM Studio"
license = "MIT"
repository = "https://github.com/uwuclxdy/ollama-lmstudio-proxy"
keywords = ["ollama", "lmstudio", "proxy", "llm", "ai"]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
warp = { version = "0.4.2", features = ["server"] }
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
fern = "0.7.1"
moka = { version = "0.12.15", features = ["future"] }
sha2 = "0.10.9"
md5 = "0.8.0"
url = "2.5.8"
humantime = "2.3.0"
self-replace = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
