[package]
name = "ollama-lmstudio-proxy"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["uwuclxdy"]
description = "Blazingly fast proxy server that bridges Ollama and LM Studio"
license = "MIT"
repository = "https://github.com/uwuclxdy/ollama-lmstudio-proxy"
keywords = ["ollama", "lmstudio", "proxy", "llm", "ai"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6.11", features = ["cors"] }
http = "1.4.0"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
futures-util = "0.3.32"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
log = "0.4.29"
fern = "0.7.1"
moka = { version = "0.12.15", features = ["future"] }
sha2 = "0.11.0"
md5 = "0.8.0"
hex = "0.4.3"
url = "2.5.8"
humantime = "2.3.0"
update-informer = { version = "1.3.0", default-features = false, features = ["github"] }

[dev-dependencies]
wiremock = "0.6.5"
tempfile = "3.27.0"
http-body-util = "0.1.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
